Name:                trace
Version:             0.1
License:             MIT
Author:              Matthew Maurer
Maintainer:          maurer@ugcs.caltech.edu
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Hs-Source-Dirs:      src
  Exposed-modules:     System.Trace
  Other-Modules:       System.Trace.Linux
  Build-depends:       base, ptrace > 0.1, mtl, binary, unix, bytestring, containers
  Extensions:          GeneralizedNewtypeDeriving, ScopedTypeVariables,
                       TypeSynonymInstances, FlexibleContexts
